--- a/.github/workflows/pr-ci.yml
+++ b/.github/workflows/pr-ci.yml
@@ -31,6 +31,7 @@ env:
     --enable-rxm
     --enable-shm
     --enable-tcp
+    --enable-net
     --enable-udp
     --enable-usnic
     --enable-verbs=$PWD/rdma-core/build
