--- a/contrib/intel/jenkins/Jenkinsfile
+++ b/contrib/intel/jenkins/Jenkinsfile
@@ -369,6 +369,8 @@ pipeline {
                   echo "tcp-rxm MPICH testsuite completed."
                   python3.7 runtests.py --prov=sockets --test=mpichtestsuite
                   echo "sockets MPICH testsuite completed."
+                  python3.7 runtests.py --prov=net --test=mpichtestsuite
+                  echo "net MPICH testsuite completed."
                   echo "MPICH testsuite completed."
                 )
               """
@@ -386,6 +388,8 @@ pipeline {
                   cd /opt${env.WORKSPACE}/py_scripts/contrib/intel/jenkins/
                   python3.7 runtests.py --prov=tcp --test=shmem
                   echo "SHMEM tcp completed."
+                  python3.7 runtests.py --prov=net --test=shmem
+                  echo "SHMEM net completed."
                   python3.7 runtests.py --prov=verbs --test=shmem
                   echo "SHMEM verbs completed."
                   python3.7 runtests.py --prov=sockets --test=shmem
@@ -424,6 +428,8 @@ pipeline {
                   cd /opt${env.WORKSPACE}/py_scripts/contrib/intel/jenkins/
                   python3.7 runtests.py --prov=tcp --util=rxm --test=oneccl
                   echo "oneCCL tcp-rxm completed."
+                  python3.7 runtests.py --prov=net --test=oneccl
+                  echo "oneCCL net completed."
                   python3.7 runtests.py --prov=psm3 --test=oneccl
                   echo "oneCCL psm3 completed."
                   echo "OneCCL completed."
@@ -442,6 +448,9 @@ pipeline {
                 (
                   cd /opt${env.WORKSPACE}/py_scripts/contrib/intel/jenkins/
                   python3.7 runtests.py --prov=tcp --test=onecclgpu
+                  echo "oneCCL-GPU tcp completed."
+                  python3.7 runtests.py --prov=net --test=onecclgpu
+                  echo "oneCCL-GPU net completed."
                   echo "oneCCL-GPU completed."
                 )
               """
@@ -514,6 +523,106 @@ pipeline {
             }
           }
         }
+        stage('net-fabtests') {
+          agent {node {label 'cvl'}}
+          options { skipDefaultCheckout() }
+          steps {
+            withEnv(['PATH+EXTRA=/usr/sbin:/usr/bin:/sbin:/bin:/usr/local/bin/:$PYTHONPATH']) {
+              sh """
+                env
+                (
+                  cd /opt${env.WORKSPACE}/py_scripts/contrib/intel/jenkins/
+                  python3.7 runtests.py --prov=net --test=fabtests
+                  python3.7 runtests.py --prov=net --test=fabtests --ofi_build_mode=dbg
+                  python3.7 runtests.py --prov=net --test=fabtests --ofi_build_mode=dl
+                  echo "net completed."
+                )
+              """
+            }
+          }
+        }
+        // separate imb tests into 3 stages rather than 1 to hopefully run in parallel
+        stage('MPI_net-1') {
+          agent {node {label 'cvl'}}
+          options { skipDefaultCheckout() }
+          steps {
+            withEnv(['PATH+EXTRA=/usr/sbin:/usr/bin:/sbin:/bin:/usr/local/bin/:$PYTHONPATH']) {
+              sh """
+                env
+                (
+                  cd /opt${env.WORKSPACE}/py_scripts/contrib/intel/jenkins/
+                  python3.7 runtests.py --prov=net --test=IMB --imb_grp=1
+                  echo "MPI_net Group 1 completed."
+                )
+              """
+            }
+          }
+        }
+        stage('MPI_net-2') {
+          agent {node {label 'cvl'}}
+          options { skipDefaultCheckout() }
+          steps {
+            withEnv(['PATH+EXTRA=/usr/sbin:/usr/bin:/sbin:/bin:/usr/local/bin/:$PYTHONPATH']) {
+              sh """
+                env
+                (
+                  cd /opt${env.WORKSPACE}/py_scripts/contrib/intel/jenkins/
+                  python3.7 runtests.py --prov=net --test=IMB --imb_grp=2
+                  echo "MPI_net Group 2 completed."
+                )
+              """
+            }
+          }
+        }
+        stage('MPI_net-3') {
+          agent {node {label 'cvl'}}
+          options { skipDefaultCheckout() }
+          steps {
+            withEnv(['PATH+EXTRA=/usr/sbin:/usr/bin:/sbin:/bin:/usr/local/bin/:$PYTHONPATH']) {
+              sh """
+                env
+                (
+                  cd /opt${env.WORKSPACE}/py_scripts/contrib/intel/jenkins/
+                  python3.7 runtests.py --prov=net --test=IMB --imb_grp=3
+                  echo "MPI_net Group 3 completed."
+                )
+              """
+            }
+          }
+        }
+        stage('net-osu') {
+          agent {node {label 'cvl'}}
+          options { skipDefaultCheckout() }
+          steps {
+            withEnv(['PATH+EXTRA=/usr/sbin:/usr/bin:/sbin:/bin:/usr/local/bin/:$PYTHONPATH']) {
+              sh """
+                env
+                (
+                  cd /opt${env.WORKSPACE}/py_scripts/contrib/intel/jenkins/
+                  python3.7 runtests.py --prov=net --test=osu
+                  echo "MPI-net-osu completed."
+                )
+              """
+            }
+          }
+        }
+        stage('multinode-net-performance') {
+          agent {node {label 'cvl'}}
+          options { skipDefaultCheckout() }
+          steps {
+              withEnv(['PATH+EXTRA=/usr/sbin:/usr/bin:/sbin:/bin:/usr/local/bin/:$PYTHONPATH'])
+              {
+                sh """
+                  env
+                  (
+                      cd /opt${env.WORKSPACE}/py_scripts/contrib/intel/jenkins/
+                      python3.7 runtests.py --prov=net --test=multinode
+                      echo "multinode performance completed."
+                  )
+                """
+              }
+          }
+        }
       }
     }
     stage ('Summary') {
@@ -579,11 +688,11 @@ pipeline {
     success {
       node ('daos') {
         withEnv(['PATH+EXTRA=/usr/sbin:/usr/bin:/sbin:/bin:/usr/local/bin:$PYTHONPATH']) {
-	  dir ("${env.DAOS_CLUSTER_HOME}/avocado") {
+          dir ("${env.DAOS_CLUSTER_HOME}/avocado") {
             deleteDir()
           }
         }
-      } 
+      }
     }
   }
 }
