--- a/prov/net/Makefile.include
+++ b/prov/net/Makefile.include
@@ -21,12 +21,12 @@ _xnet_files = \
 if HAVE_NET_DL
 pkglib_LTLIBRARIES += libnet-fi.la
 libnet_fi_la_SOURCES = $(_xnet_files) $(common_srcs)
-libnet_fi_la_LIBADD = $(linkback) $(xnet_shm_LIBS)
+libnet_fi_la_LIBADD = $(linkback) $(xnet_shm_LIBS) $(uring_LIBS)
 libnet_fi_la_LDFLAGS = -module -avoid-version -shared -export-dynamic
 libnet_fi_la_DEPENDENCIES = $(linkback)
 else !HAVE_NET_DL
 src_libfabric_la_SOURCES += $(_xnet_files)
-src_libfabric_la_LIBADD += $(xnet_shm_LIBS)
+src_libfabric_la_LIBADD += $(xnet_shm_LIBS) $(uring_LIBS)
 endif !HAVE_NET_DL
 
 prov_install_man_pages += man/man7/fi_net.7
