iouring: Add io_uring operations to be used by sockapi
The patch adds the file src/iouring.c where are listed all the
definitions related to io_uring.

In addition, configure.ac was modified to export the autoconf
variable HAVE_LIBURING and which is used to determine whether
src/iouring.c must be compiled or not.

Signed-off-by: Sylvain Didelot <sdidelot@ddn.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -112,6 +112,10 @@ common_srcs += include/linux/osd.h
 common_srcs += include/unix/osd.h
 endif
 
+if HAVE_LIBURING
+common_srcs += src/iouring.c
+endif
+
 common_hook_srcs =				\
 	prov/hook/src/hook.c			\
 	prov/hook/src/hook_av.c			\
