prov/efa: Add tracepoints to send/recv/read ops
Signed-off-by: Tang, Jingyin <jytang@amazon.com>

--- a/prov/efa/Makefile.include
+++ b/prov/efa/Makefile.include
@@ -62,7 +62,8 @@ _efa_files = \
 	prov/efa/src/rxr/rxr_pkt_cmd.c \
 	prov/efa/src/rxr/rxr_read.c \
 	prov/efa/src/rxr/rxr_op_entry.c \
-	prov/efa/src/rxr/rxr_atomic.c
+	prov/efa/src/rxr/rxr_atomic.c \
+	prov/efa/src/rxr/rxr_tp_def.c
 
 _efa_headers = \
 	prov/efa/src/efa.h \
@@ -90,8 +91,13 @@ _efa_headers = \
 	prov/efa/src/rxr/rxr_read.h \
 	prov/efa/src/rxr/rxr_atomic.h \
 	prov/efa/src/rxr/rxr_op_entry.h \
-	prov/efa/src/rxr/rdm_proto_v4.h
+	prov/efa/src/rxr/rdm_proto_v4.h \
+	prov/efa/src/rxr/rxr_tp_def.h \
+	prov/efa/src/rxr/rxr_tp.h
 
+if HAVE_LTTNG
+efa_LDFLAGS += -llttng-ust
+endif HAVE_LTTNG
 
 if ENABLE_EFA_UNIT_TEST
 noinst_PROGRAMS += prov/efa/test/efa_unit_test
